--- a/index.html
+++ b/index.html
@@ -16,42 +16,50 @@
           <div class="fixed-block__logo">
             <img src="./assets/icons/Group.svg" alt="Лого" />
           </div>
-          <button class="fixed-block__searh">
-            <img src="./assets/icons/search.svg" alt="Кнопка Поиска" />
-          </button>
+          <button class="fixed-block__searh"></button>
         </div>
       </header>
       <main class="main">
         <div class="main-container">
           <h1 class="main-container__text">Ремонт Техники</h1>
-          <ul class="main-container__list">
-            <li class="main-container__elem">
-              <a href="#">Услуги и сервисы</a>
-            </li>
-            <li class="main-container__elem">
-              <a href="#">Корпоративным клиент</a>
-            </li>
-            <li class="main-container__elem">
-              <a href="#">Продавцам техники</a>
-            </li>
-            <li class="main-container__elem"><a href="#">Партнерам</a></li>
-            <li class="main-container__elem"><a href="#">Производителям</a></li>
-            <li class="main-container__elem">
-              <a href="#">Наши сервисные центр</a>
-            </li>
-            <li class="main-container__elem"><a href="#">Контакты</a></li>
-          </ul>
+          <nav>
+            <ul class="main-container__list">
+              <li class="main-container__elem">
+                <a href="#">Услуги и сервисы</a>
+              </li>
+              <li class="main-container__elem">
+                <a href="#">Корпоративным клиент</a>
+              </li>
+              <li class="main-container__elem">
+                <a href="#">Продавцам техники</a>
+              </li>
+              <li class="main-container__elem"><a href="#">Партнерам</a></li>
+              <li class="main-container__elem">
+                <a href="#">Производителям</a>
+              </li>
+              <li class="main-container__elem">
+                <a href="#">Наши сервисные центр</a>
+              </li>
+              <li class="main-container__elem"><a href="#">Контакты</a></li>
+            </ul>
+          </nav>
           <div class="nav-container">
             <a class="nav-container__call-icon" href="#"></a>
             <a class="nav-container__chat-icon" href="#"></a>
             <a class="nav-container__profile-icon" href="#"></a>
-            <span class="nav-container__mail">mail@cps.com</span>
-            <span class="nav-container__number">8 800 890 8900</span>
+            <span class="nav-container__mail"
+              ><a style="color: black" href="#">mail@cps.com</a></span
+            >
+            <span class="nav-container__number"
+              ><a style="color: black" href="#">8 800 890 8900</a></span
+            >
           </div>
           <div class="nav-container__language">
-            <a href="#">RU</a>
-            <a href="#">EN</a>
-            <a href="#">CH</a>
+            <ul style="display: flex">
+              <li style="margin-right: 5px"><a href="#">RU</a></li>
+              <li style="margin-right: 5px"><a href="#">EN</a></li>
+              <li><a href="#">CH</a></li>
+            </ul>
           </div>
         </div>
       </main>
